# meow

./: Cargo.toml  Dockerfile  readme.md
src/: appstate.rs  commands.rs  generate.rs  main.rs  prelude.rs
src/db/: mod.rs  sentiment.rs  user.rs
src/scripts/: meow.ql
src/utils/: avatar.rs  mod.rs
