[package]
name = "meow"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
canvas = { git = "https://github.com/nathanielfernandes/canvas.git" }
imagetext = { git = "https://github.com/nathanielfernandes/imagetext.git", features = [
    "emoji",
    "default-resolver",
    "fontdb",
] }

rand = "0.8.5"
dotenvy = "0.15.6"
futures = "0.3.26"
image = "0.24.5"
poise = "0.5.6"
thiserror = "1.0.38"
pretty_env_logger = "0.4.0"
log = "0.4.14"
once_cell = "1.17.0"
tokio = { version = "1.25.0", features = ["full"] }
