[package]
name = "meow"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
canvas = { git = "https://github.com/nathanielfernandes/canvas.git" }
imagetext = { git = "https://github.com/nathanielfernandes/imagetext.git", features = [
    "emoji",
    "default-resolver",
    "fontdb",
] }

rand = "0.8.5"
dotenvy = "0.15.6"
futures = "0.3.26"
image = "0.24.5"
poise = "0.5.6"
thiserror = "1.0.38"
pretty_env_logger = "0.4.0"
log = "0.4.14"
once_cell = "1.17.0"
tokio = { version = "1.25.0", features = ["full"] }
sqlx = { version = "0.7.2", features = [
    "runtime-tokio-rustls",
    "macros",
    "bigdecimal",
    "postgres",
] }
moka = { version = "0.12.1", features = ["future"] }
reqwest = { version = "0.11.22", features = ["json"] }
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
urlencoding = "2.1.3"
